# Project-Castle

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.bat  dev.ps1  main.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
asl_translator/: __init__.py  eval.py  gloss.py  handspeak.py  pipeline.py  signs.py  tokenizer.py
asl_translator/nlp/: __init__.py  analyzer.py  flexibility.py  mwe.py  transfer.py
cloudflared/: config.yml.example
data/eval/: gloss_pairs.json
scripts/: cloudflare_tunnel.ps1  dev.py  download_nlp_models.py  install_cloudflared.ps1
tests/: conftest.py  test_auth.py  test_eval.py  test_flexibility.py  test_nlp.py  test_pipeline.py  test_reports.py  test_sign_variants.py  test_signs.py  test_transfer.py  test_web_app.py
web_app/: __init__.py  admin_routes.py  auth_routes.py  config.py  db.py  models.py  reports.py  submissions.py
web_app/static/: admin-reports.js  admin-signs.js  admin.js  animations.css  app.js  common.js  home.js  settings.js  styles.css  submit.js  translation.js
web_app/templates/: _macros.html  _phrase_bar.html  base.html  home.html  index.html  info.html  settings.html  submit.html  translation.html
web_app/templates/admin/: _subnav.html  reports.html  review.html  signs.html
web_app/templates/auth/: login.html  register.html
