[project]
name = "contextual-asl-translator"
version = "0.1.0"
description = "Deterministic ASL gloss translation pipeline with a Flask web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["asl_translator", "web_app", "tests", "main.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
